# cci

./: .envrc  .gitignore  README.md  autoencoder.ipynb  dataloader.ipynb  dataset.ipynb  dataset_creator.ipynb  env.sh  inference.ipynb  job.sh  job_cnn.sh  justfile  pyproject.toml  result_viewer.ipynb  torch_check.py  tuner.ipynb  verify_dataset.ipynb  viewer.ipynb  viewer_.py  viewer_bk.ipynb
cci/: __main__.py  metrics.py  train.py  tune.py  utils.py  viewer.py
cci/dataset/: __init__.py  dataset.py  transforms.py
cci/models/: __init__.py  cnn.py  layers.py  mlp.py
data/: PR_AS.csv  as_test.csv  as_train.csv  clean_df.csv  clean_full.csv  dfb.csv  dfb_full.csv  dfb_overrides.csv  full.csv  full_test.csv  full_val_0.csv  original.csv  override_df.csv  override_df_template.csv  pe_test.csv  pe_train.csv  pr_test.csv  pr_train.csv  test_train_val.csv  train_0.csv  train_1.csv  train_2.csv  train_3.csv  train_4.csv  val_1.csv  val_2.csv  val_3.csv  val_4.csv  vft_test.csv  vft_train.csv
rerun-loader-test/: rerun-loader-test
src/cci/: metrics.py
src/cci/dataset/: __init__.py  dataset.py  transforms.py
src/cci/models/: __init__.py  mlp.py
