[project]
name = "cci"
version = "0.1.0"
description = "Cardiac Change Indicator"
authors = [{ name = "Halvor Kvamme", email = "flkz@proton.me" }]
dependencies = [
    "numpy>=1.26.4",
    "optuna>=3.5.0",
    "torchmetrics>=1.3.1",
    "jupyter>=1.0.0",
    "polars[pyarrow]>=0.20.15",
    "scipy>=1.12.0",
    "matplotlib>=3.8.3",
    "scikit-learn>=1.4.1.post1",
    "plotly>=5.19.0",
    "hiplot>=0.1.33",
    "rerun-sdk @ https://build.rerun.io/commit/6cef093/wheels/rerun_sdk-0.15.0a3-cp38-abi3-manylinux_2_31_x86_64.whl",
    "typer[all]>=0.9.0",
    "structlog>=24.1.0",
    "plotly-resampler>=0.9.2",
    "seaborn>=0.13.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[project.optional-dependencies]
visualize = ["optuna-dashboard>=0.15.0"]
cpu = ["torch==2.2.1+cpu"]
cuda = ["torch==2.2.1+cu121"]
rocm = ["torch==2.2.1+rocm5.7"] # NOTE: Currently doesn't work

[[tool.pdm.source]]
url = "https://download.pytorch.org/whl/torch/"
verify_ssl = true
name = "torch"
include_packages = ["torch"]
type = "find_links"

[tool.ruff]
line-length = 120

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = "cci"

[tool.pdm.dev-dependencies]
lsp = [
  "pylsp-mypy>=0.6.8",
  "python-lsp-server>=1.9.0",
  "pylsp-rope>=0.1.11",
  "python-lsp-ruff>=2.0.1",
]
dev = ["bandit>=1.7.6", "mypy>=1.8.0", "ruff>=0.1.11", "nbstripout>=0.7.1"]

[tool.pdm.scripts]
bandit_ = "bandit --r -ll cci"
mypy_ = "mypy cci/"
lint.composite = ["mypy_", "bandit_"]
fmt = "ruff format cci"

cci = "python cci"
